# Episteme

./: .dockerignore  .gitignore  ARCHITECTURE_INTEGRATION.md  BUILD.md  BuildPackager.ps1  COMPLETED_NATIVE_REFACTORING_PHASE2.md  CREDITS.md  CheckSingleLib.java  DiagnoseNative.java  FINAL_REPORT.md  FUTURE_ENHANCEMENTS.md  HPC_PROGRESS_REPORT.md  Launcher.java  NATIVE_LIBS_INSTALLATION.md  NATIVE_LIBS_INSTALLATION_LINUX.md  PYTHON_INTERFACE.md  README.md  README_LOADERS.md  SESSION_SUMMARY.md  TestBLAS.java  VerifyBackends.java  apply_icons.ps1  audit_core.txt  benchmark-results.json  benchmark_compile_error.txt  benchmark_errors.txt  benchmark_full_log.txt  benchmark_output.txt  benchmarks.bat  benchmarks.sh  build_check_social_3.txt  build_check_social_3_utf8.txt  build_episteme_jni.ps1  build_episteme_jni.sh  build_episteme_native.ps1  build_episteme_native.sh  build_error.txt  build_errors.txt  build_errors_2.txt  build_errors_utf8.txt  (+174 more)
.docs/: NATIVE_BACKEND_ENHANCEMENTS.md
certs/: ca.crt  ca.key  ca.srl  server-key.pem  server.crt  server.csr  server.pem
docker/: Dockerfile.gpu  Dockerfile.server  Dockerfile.worker  prometheus.yml
docs/: API.md  ARCHITECTURE.md  BENCHMARK_COMPARISON.md  BUILD.md  CREDITS.md  DISTRIBUTED_API.md  EPISTEME_PRESENTATION_2025.md  EXAMPLES.md  FEATURES.md  FFM_DESIGN_GUIDE.md  GPU_SETUP.md  LINEAR_ALGEBRA_COMPLIANCE_REPORT.md  LinearAlgebraComplianceReport.md  MATH_CONCEPTS.md  MISSING_LIBRARIES.md  NATIVE_LIBS_INSTALLATION_LINUX.md  NATIVE_LIBS_INSTALLATION_WINDOWS.md  NATIVE_LIBS_SETUP.md  PERFORMANCE_TUNEUP.md  PYTHON_INTERFACE.md  README_APPS.md  README_BENCHMARKS.md  README_DISTRIBUTED.md  README_LOADERS.md  README_MCP.md  README_SERVER.md  README_SERVER_SETUP.md  REQUIRED_LIBS.md  RESOURCE_LICENSES.md  REST_API.md
episteme-benchmarks/: effective-pom-benchmarks  pom.xml
episteme-client/: pom.xml
episteme-core/: build_errors.txt  pom.xml
episteme-dashboard/: package.json
episteme-database/: pom.xml
episteme-featured-apps/: pom.xml  (+3 more)
episteme-native/src/main/cpp/: CMakeLists.txt
episteme-native/src/main/cpp/vision/: process_image.cpp
(+39661 files in other folders)
